fix: caret is not visible in dark mode

--- a/src/style/post.less
+++ b/src/style/post.less
@@ -311,7 +311,7 @@ pre.output {
 }
 
 @media (prefers-color-scheme: dark) {
-  pre textarea.editor {
-    caret-color: white;
+  pre.block-editable .editor {
+    caret-color: rgb(255 255 255 / 70%);
   }
 }
